<resources>
    <string name="app_name">DimenScan</string>
    <string name="account_name">Account name</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="welcome_to_dimenscan">Welcome to DimenScan</string>
    <string name="account_text">To create an account with DimenScan, Please fill out your details below!</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">johnSmith@gmail.com</string>
    <string name="lName_hint">Last Name</string>
    <string name="fName_hint">First Name</string>
    <string name="acc_name_hint">Account name</string>
    <string name="email_login">Email</string>
    <string name="account_name_p">Account Name</string>
    <string name="title_activity_table_listing">TableListing</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="rotate">Rotate</string>
    <string name="Save">Save Image</string>

</resources>